add random delay

--- a/config.json.templ
+++ b/config.json.templ
@@ -3,6 +3,7 @@
     "password": "你的浙大统一认证平台密码",
     "schedule": {
         "hour": "6",
-        "minute": "5"
+        "minute": "5",
+        "delay": "4"
     }
 }
